k8s/traefik/lute.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lute
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-tls
  rules:
    - host: lute.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lute
                port:
                  number: 5001
